--- a/package.json
+++ b/package.json
@@ -64,9 +64,10 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
-    "@emotion/react": "^11.8.2",
+    "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.5.2",
+    "@mui/material": "^5.6.0",
+    "@mui/styled-engine-sc": "^5.5.2",
     "@types/react-router-dom": "^5.3.3",
     "i": "^0.3.7",
     "nanoid": "^3.3.1",
@@ -76,7 +77,10 @@
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.5"
   },
   "loki": {
     "configurations": {
