--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.8",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
@@ -69,6 +70,7 @@
     "@mui/material": "^5.6.0",
     "@mui/styled-engine-sc": "^5.5.2",
     "@types/react-router-dom": "^5.3.3",
+    "firebase": "^9.6.10",
     "i": "^0.3.7",
     "nanoid": "^3.3.1",
     "npm": "^8.5.5",
